# weirb

./: .bumpversion.cfg  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  bootstrap.sh  pyproject.toml  setup.py  tasks.py
example/: demo.py  hello.py  service.py
example/echo/services/: echo.py
src/weirb/: __init__.py  app.py  cli.py  client.py  config.py  context.py  error.py  handler.py  helper.py  logger.py  request.py  response.py  router.py  scope.py  service.py  shell.py  shell_doc.py  tagger.py
src/weirb/compat/: contextlib.py
src/weirb/docs-template/: _config.yml
src/weirb/generator/: __init__.py  errors.md.mako  generator.py  intro.md.mako  service.md.mako
src/weirb/server/: __init__.py  parser.py  request.py  response.py  server.py  worker.py
tests/: test_weirb.py
weirb/: __init__.py  config.py  const.py  error.py  helper.py  main.py  parser.py  request.py  response.py  router.py  server.py  service.py  worker.py
weirb/docs-template/: _config.yml  fabfile.py
weirb/generator/: errors.md.mako  service.md.mako
weirb/server/: __init__.py  worker.py
weirb_hrpc/: __init__.py  app.py  cli.py  config.py  context.py  error.py  generator.py  helper.py  request.py  response.py  router.py  service.py  shell.py  shell_doc.py  tagger.py
weirb_hrpc/docs-template/: _config.yml
weirb_hrpc/generator/: __init__.py  generator.py  intro.md.mako  service.md.mako
weirb_hrpc/project-template/: hello.py
weirb_hrpc/project-template/echo/: config.py
weirb_hrpc/project-template/echo/services/: echo.py
(+4 files in other folders)
